# solana-evm-cubist-mapping

./: .gitignore  Cargo.toml
backend/: package.json  send_usdc_usdt_batched_with_cubist.ts  solana-auth.ts  tsconfig.json
docs/: CUBIST_INTEGRATION_SPEC.md
policy/: Cargo.toml
policy/src/: main.rs
src/: lib.rs
tests/: atomicity_tests.rs
