[package]
name = "cubist-wallet-provisioner"
version = "0.1.0"
edition = "2021"

[lib]
name = "cubist_wallet_provisioner"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# The actual Cubist policy is in the 'policy' subdirectory
# Build it with: cd policy && cargo build --release

